# pr2_3dnav

./: .gitignore  CMakeLists.txt  package.xml
configs/: costmap_common_params.yaml  posefollower_local_planner.yaml  sbpl_global_planner.yaml
launch/: pr2_3dnav_all.launch  pr2_3dnav_amcl.launch  pr2_3dnav_complete.launch  pr2_3dnav_gazebo.launch  pr2_3dnav_move_base.launch  pr2_3dnav_nav_stack.launch  pr2_3dnav_octomap_server.launch  pr2_3dnav_slam.launch
maps/: cube.bt  cube.pgm  cube.yaml  geb78_small.pgm  geb78_small.yaml  pakour.pgm  pakour.yaml
pr2_3dnav/: package.xml
pr2_3dnav/configs/: global_costmap_params.yaml  sbpl_global_planner.yaml
pr2_3dnav/launch/: pr2_3dnav_gazebo.launch  pr2_3dnav_octomapper.launch
pr2_3dnav/worlds/geb78_small_5/: geb78_small_5.yaml
pr2_3dnav/worlds/pakour/: pakour.bt
visualization/: CMakeLists.txt  package.xml  pr2_3dnav_slice_rviz_plugin_description.xml  setup.py
visualization/pr2_3dnav_slice_rviz_plugin/: CMakeLists.txt
visualization/pr2_3dnav_slice_rviz_plugin/include/: pr2_3dnav_slice_display.h
visualization/pr2_3dnav_slice_rviz_plugin/include/pr2_3dnav_slice_rviz_plugin/: pr2_3dnav_slice_display.h
visualization/pr2_3dnav_slice_rviz_plugin/src/: plugin_init.cpp  pr2_3dnav_slice_display.cpp
worlds/: cube.world  pakour2.world~
worlds/geb78_small/: geb78_small.bt  geb78_small.pgm  geb78_small.yaml
worlds/geb78_small_5/: geb78_small_5.world
